Update frontend which missing

--- a/mysite/myapp/templates/mk/base.html
+++ b/mysite/myapp/templates/mk/base.html
@@ -73,91 +73,46 @@
                         <p>Home</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#componentsExamples">
-                        <i class="material-icons">apps</i>
-                        <p>Components<b class="caret"></b></p>
+                <li class="nav-item ">
+                    <a class="nav-link reference internal current" href="#Vendors"
+                       title="Permalink to this headline">
+                        <i class="material-icons">donut_large</i>
+                        <p>Vendors</p>
                     </a>
-                    <div class="collapse " id="componentsExamples">
-                        <ul class="nav">
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/buttons.html">
-                                    <span class="sidebar-mini">B</span>
-                                    <span class="sidebar-normal">Buttons</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/grid.html">
-                                    <span class="sidebar-mini">GS</span>
-                                    <span class="sidebar-normal">Grid System</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/panels.html">
-                                    <span class="sidebar-mini">P</span>
-                                    <span class="sidebar-normal">Panels</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/sweet-alert.html">
-                                    <span class="sidebar-mini">SA</span>
-                                    <span class="sidebar-normal">Sweet Alert</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/notifications.html">
-                                    <span class="sidebar-mini">N</span>
-                                    <span class="sidebar-normal">Notifications</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/icons.html">
-                                    <span class="sidebar-mini">I</span>
-                                    <span class="sidebar-normal">Icons</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./components/typography.html">
-                                    <span class="sidebar-mini">T</span>
-                                    <span class="sidebar-normal">Typography</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link reference internal current" href="#Networks"
+                       title="Permalink to this headline">
+                        <i class="material-icons">pie_chart</i>
+                        <p>Networks</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link reference internal current" href="#Charts"
+                       title="Permalink to this headline">
+                        <i class="material-icons">bar_chart</i>
+                        <p>Statistic Charts</p>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link reference internal current" href="#oSystem"
+                       title="Permalink to this headline">
+                        <i class="material-icons">donut_large</i>
+                        <p>Operating Systems</p>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'dashboard' %}">
+                    <a class="nav-link reference internal current" href="#Campaigns"
+                       title="Permalink to this headline">
                         <i class="material-icons">grid_on</i>
                         <p>Campaigns</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#mapsExamples">
-                        <i class="material-icons">place</i>
-                        <p>Maps<b class="caret"></b>
-                        </p>
-                    </a>
-                    <div class="collapse " id="mapsExamples">
-                        <ul class="nav">
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./maps/google.html">
-                                    <span class="sidebar-mini">GM</span>
-                                    <span class="sidebar-normal">Google Maps</span>
-                                </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="./maps/vector.html">
-                                    <span class="sidebar-mini">VM</span>
-                                    <span class="sidebar-normal">Vector maps</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">
-                        <i class="material-icons">bar_chart</i>
-                        <p>Charts</p>
+                    <a class="nav-link reference internal current" href="#Mnos"
+                       title="Permalink to this headline">
+                        <i class="material-icons">grid_on</i>
+                        <p>MNOS</p>
                     </a>
                 </li>
             </ul>
@@ -396,10 +351,14 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header card-header-success card-header-icon">
-                                    <div class="card-icon">
+                                    <div class="card-icon" section id="Vendors">
                                         <i class="material-icons">donut_large</i>
                                     </div>
-                                    <h4 class="card-title">Vendors</h4>
+                                    <h4 class="card-title">Vendors
+                                        <a class="headerlink" href="#Vendors"
+                                           title="Permalink to this headline">
+                                        </a>
+                                    </h4>
                                 </div>
                                 <div class="card-body">
                                     <div class="row">
@@ -429,10 +388,14 @@
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header card-header-success card-header-icon">
-                                        <div class="card-icon">
+                                        <div class="card-icon" section id="Networks">
                                             <i class="material-icons">pie_chart</i>
                                         </div>
-                                        <h4 class="card-title">Networks</h4>
+                                        <h4 class="card-title">Networks
+                                            <a class="headerlink" href="#Networks"
+                                           title="Permalink to this headline">
+                                        </a>
+                                        </h4>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
@@ -468,10 +431,14 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-success card-header-icon">
-                            <div class="card-icon">
+                            <div class="card-icon section" id="Charts">
                                 <i class="material-icons">insert_chart</i>
                             </div>
-                            <h4 class="card-title">Statistic Charts</h4>
+                            <h4 class="card-title">Statistic Charts
+                                <a class="headerlink" href="#Charts"
+                                   title="Permalink to this headline">
+                                </a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -529,10 +496,14 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-success card-header-icon">
-                            <div class="card-icon">
+                            <div class="card-icon section" id="oSystem">
                                 <i class="material-icons">donut_large</i>
                             </div>
-                            <h4 class="card-title">Operating Systems</h4>
+                            <h4 class="card-title">Operating Systems
+                                <a class="headerlink" href="#oSystem"
+                                   title="Permalink to this headline">
+                                </a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -563,10 +534,14 @@
                 <div class="col-lg-12">
                     <div class="card ">
                         <div class="card-header card-header-success card-header-icon">
-                            <div class="card-icon">
+                            <div class="card-icon section" id="Campaigns">
                                 <i class="material-icons">grid_on</i>
                             </div>
-                            <h4 class="card-title">Campaigns</h4>
+                            <h4 class="card-title">Campaigns
+                                <a class="headerlink" href="#Campaigns"
+                                   title="Permalink to this headline">
+                                </a>
+                            </h4>
                         </div>
                         <div class="card-body ">
                             <div class="card bootstrap-table">
@@ -582,10 +557,14 @@
                 <div class="col-md-12">
                     <div class="card ">
                         <div class="card-header card-header-success card-header-icon">
-                            <div class="card-icon">
+                            <div class="card-icon section" id="Mnos">
                                 <i class="material-icons">grid_on</i>
                             </div>
-                            <h4 class="card-title">MNOs</h4>
+                            <h4 class="card-title">MNOs
+                                <a class="headerlink" href="#Mnos"
+                                   title="Permalink to this headline">
+                                </a>
+                            </h4>
                         </div>
                         <div class="card-body ">
                             <div class="card bootstrap-table">
